All clean and organized, icon picker added, manage added and removed editor on the fly

--- a/Src/Lecoati.BlenderGrid.Ui/Lecoati.BlenderGrid.Ui.csproj
+++ b/Src/Lecoati.BlenderGrid.Ui/Lecoati.BlenderGrid.Ui.csproj
@@ -223,42 +223,46 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Assets\parameterconfig.css" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Assets\blendergrideditor.css" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Assets\layersEditor.css" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\blendergrideditor.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\blendergrideditor.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\dialogs\parameterconfig.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\dialogs\parameterconfig.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\boolean.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\colorPicker.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\colorPicker.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\contentpicker.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\contentpicker.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\layers.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\layers.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\layersEditor.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\layersEditor.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\mediapicker.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\mediapicker.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\textarea.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Editors\textstring.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\grid.editors.config.sample.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\assets\backgroundColorPicker.css" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\assets\pngSimu.png" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\dialogs\parameterconfig.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\dialogs\parameterconfig.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\grideditor.prevalues.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\dialogs\editorconfig.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\grideditor.prevalues.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\dialogs\editorconfig.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\backgroundColorPicker.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\backgroundColorPicker.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\GridInjector.controller.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\blendergridsetting\GridInjector.html" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\Common\Directive\LayersResizableDraggable.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\Common\Filter\OrderObjectBy.filter.js" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\Common\Services\requestHelper.Service.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\assets\iconpicker.css" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\assets\parameterconfig.css" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\assets\blendergrideditor.css" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\assets\layerseditor.css" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\blendergrideditor.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\blendergrideditor.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\parameterconfig.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\parameterconfig.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\boolean.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\colorpicker.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\colorpicker.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\contentpicker.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\contentpicker.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\iconpicker.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\iconpicker.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\iconpickereditor.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\iconpickereditor.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\layers.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\layers.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\layerseditor.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\layerseditor.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\mediapicker.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\mediapicker.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\textarea.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\editors\textstring.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\assets\backgroundcolorpicker.css" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\assets\pngSimu.png" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\parameterconfig.prevalues.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\parameterconfig.prevalues.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\blendergrid.prevalues.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\editorconfig.prevalues.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\blendergrid.prevalues.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\dialogs\editorconfig.prevalues.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\settings\backgroundcolorpicker.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\settings\backgroundcolorpicker.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\blendergrid.controller.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\blendergrid.html" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\common\directive\layersresizabledraggable.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\common\filter\orderobjectby.filter.js" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\common\services\requesthelper.service.js" />
     <Content Include="App_Plugins\Lecoati.BlenderGrid\lib\jquery-ui-1.10.4.custom\css\ui-lightness\images\animated-overlay.gif" />
     <Content Include="App_Plugins\Lecoati.BlenderGrid\lib\jquery-ui-1.10.4.custom\css\ui-lightness\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
     <Content Include="App_Plugins\Lecoati.BlenderGrid\lib\jquery-ui-1.10.4.custom\css\ui-lightness\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
@@ -315,14 +319,14 @@
     <Content Include="config\BaseRestExtensions.config" />
     <Content Include="config\applications.config" />
     <Content Include="config\404handlers.config" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Accordion.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Addresse.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Carousel.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\customNav.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Jumbotron.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Slider.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Tabs.cshtml" />
-    <Content Include="App_Plugins\Lecoati.BlenderGrid\BlenderGridEditor\Views\Thumbnail.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Accordion.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Addresse.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Carousel.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\customNav.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Jumbotron.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Slider.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Tabs.cshtml" />
+    <Content Include="App_Plugins\Lecoati.BlenderGrid\core\views\Thumbnail.cshtml" />
     <Content Include="App_Plugins\Lecoati.BlenderGrid\package.manifest" />
     <Content Include="App_Plugins\Lecoati.BlenderGrid\Web.config" />
     <Content Include="Views\Partials\Grid\Editors\test2.cshtml" />
