Add frontView property in grid config to let the view be called from the generic blender controller through a child action

--- a/Src/Lecoati.BlenderGrid.Extension/Lecoati.BlenderGrid.Extension.csproj
+++ b/Src/Lecoati.BlenderGrid.Extension/Lecoati.BlenderGrid.Extension.csproj
@@ -219,6 +219,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BlenderController.cs" />
     <Compile Include="Controllers\HelperController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
