--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@
 /Src/Lecoati.LeBlender.Ui/fonts
 /Src/Lecoati.LeBlender.Ui/img
 /Src/Lecoati.LeBlender.Ui/masterpages
+/Src/Lecoati.LeBlender.Ui/App_Plugins/gridStyle
+/Src/Lecoati.LeBlender.Ui/App_Plugins/dummy.txt
+/Src/Lecoati.LeBlender.Extension/App_Data
