--- a/Src/Lecoati.LeBlender.Extension/Lecoati.leblender.Extension.csproj
+++ b/Src/Lecoati.LeBlender.Extension/Lecoati.leblender.Extension.csproj
@@ -268,7 +268,7 @@
     <Compile Include="Models\LeBlenderValue.cs" />
     <Compile Include="Models\LeBlenderModelMatchingConverter.cs" />
     <Compile Include="Models\LeBlenderPropertyModel.cs" />
-    <Compile Include="Models\BlenderModel.cs" />
+    <Compile Include="Models\LeBlenderModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LeBlenderHelper.cs" />
   </ItemGroup>
@@ -299,7 +299,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>52871</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
