Third package ignored

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /Src/Lecoati.LeBlender.Ui/App_Plugins/gridStyle
 /Src/Lecoati.LeBlender.Ui/App_Plugins/dummy.txt
 /Src/Lecoati.LeBlender.Extension/App_Data
+/Src/Lecoati.LeBlender.Ui/App_Plugins/Doc_Type_Grid
+/Src/Lecoati.LeBlender.Ui/App_Plugins/DocTypeGridEditor
