Switch to use Umbraco methods for loading grid editors. Deprecate GridEditor class in favor of Umbraco's IGridEditorConfig.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /Src/Lecoati.LeBlender.Extension/App_Data
 /Src/Lecoati.LeBlender.Ui/App_Plugins/Doc_Type_Grid
 /Src/Lecoati.LeBlender.Ui/App_Plugins/DocTypeGridEditor
+/.vs/config/applicationhost.config
