--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@
 /Src/Lecoati.LeBlender.Extension/App_Data
 /Src/Lecoati.LeBlender.Ui/App_Plugins/Doc_Type_Grid
 /Src/Lecoati.LeBlender.Ui/App_Plugins/DocTypeGridEditor
+/.vs/config
+/PrecompiledWeb/
